--- a/styles/room-booking.css
+++ b/styles/room-booking.css
@@ -136,7 +136,7 @@ html, body {
 }
 
 .book-room-button:hover {
-    background-color: #2980b9; /* Darker blue on hover */
+    background-color: #0a5383;  /* Darker blue on hover */
 }
 
 /* Responsive Design */
