--- a/styles/dashboard-user.css
+++ b/styles/dashboard-user.css
@@ -21,7 +21,7 @@ html, body {
 
 /* Sidebar Styling */
 .sidebar {
-    width: 210px;
+    width: 240px;
     background-color: #2C3E50;
     color: #fff;
     padding: 20px;
@@ -103,6 +103,7 @@ html, body {
     background-color: #ffffff;
     border-radius: 8px;
     box-sizing: border-box;
+    margin-top: 50px;
 }
 
 .room {
