--- a/styles/dashboard-admin.css
+++ b/styles/dashboard-admin.css
@@ -16,14 +16,15 @@ html, body {
 
 /* Sidebar Styling */
 .sidebar {
-    width: 210px;
+    width: 240px;
     background-color: #2C3E50;
     color: #fff;
-    padding: 20px;
+    padding: 40px;
     position: fixed;
     top: 50px !important;
     height: 100%;
     z-index: 1100;
+    margin-top: 10px;
 }
 
 .profile {
