--- a/styles/edit_room.css
+++ b/styles/edit_room.css
@@ -20,6 +20,10 @@ h1 {
     color: #333;
 }
 
+.main-content h3{
+    margin-bottom: 40px;
+}
+
 form {
     display: flex;
     flex-direction: column;
@@ -34,6 +38,9 @@ label {
     color: #333;
     margin-bottom: 5px;
     font-weight: bold;
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-bottom: 20px;
 }
 
 input[type="text"],
@@ -41,19 +48,25 @@ input[type="number"],
 input[type="date"],
 input[type="time"],
 textarea {
-    width: 100%;
+    width: 80%;
     padding: 8px;
     font-size: 16px;
     border: 1px solid #ddd;
     border-radius: 4px;
+    margin-bottom:20px ;
+    margin-left: 35px;
+    margin-right: 35px;
 }
 
 input[type="checkbox"] {
     margin-right: 10px;
+    margin-bottom: 20px;
 }
 
+
+
 button {
-    background-color: #4CAF50;
+    background-color: #53687d;
     color: white;
     font-size: 16px;
     padding: 10px;
@@ -61,10 +74,13 @@ button {
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    width: 90%;
+    margin-left: 35px;
+    margin-right: 35px;
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color:   #2C3E50;
 }
 
 input[readonly] {
