--- a/styles/dashboard-user.css
+++ b/styles/dashboard-user.css
@@ -615,6 +615,26 @@ body {
     margin-bottom: 100px; /* Adjust based on footer height if position: fixed is used */
   }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   /* General Footer Styling */
   .university-footer {
     background-color: #2C3E50 ;
@@ -624,9 +644,9 @@ body {
     position: relative; /* Change to fixed if you want it to stay visible at all times */
     z-index: 9999; /* A high z-index to ensure it appears above other elements */
     width: 100%; /* Full width for the footer */
-    box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.5); /* Optional shadow for better visibility */
     height: 50px;
-    margin-top: 430px;;
+    margin-top: 560px;;
+    height: 30px;
   }
   
   
@@ -678,8 +698,6 @@ body {
     padding: 5;
 
   }
-
-
   /* Responsive Design */
   @media (max-width: 768px) {
     .footer-content {
