--- a/styles/contact-us.css
+++ b/styles/contact-us.css
@@ -400,15 +400,13 @@
 
   /* General Footer Styling */
   .university-footer {
-    background-color: #2C3E50 ;
-    color: white;
-    padding: 10px;
-    font-family: Arial, sans-serif;
-    position: relative; /* Change to fixed if you want it to stay visible at all times */
-    z-index: 9999; /* A high z-index to ensure it appears above other elements */
-    width: 100%; /* Full width for the footer */
-    box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.5); /* Optional shadow for better visibility */
-    margin-top:150px;
+    position: fixed; /* Keeps it at the top while scrolling */
+    bottom: -10px;
+    left: 0;
+    width: 100%;
+    height: 50px; /* Adjust thickness */
+    background-color: #2C3E50; /* Adjust color */
+    z-index: 9999; /* Ensures it is on top of all elements */
   }
   
   
@@ -457,6 +455,7 @@
     margin-top: 5px;
     opacity: 0.4;
     padding: 5;
+    color: #ffff;
 
   }
 
