--- a/styles/edit-profile.css
+++ b/styles/edit-profile.css
@@ -313,3 +313,84 @@ body {
     background-color: #c0392b;
 
 }
+
+
+/* General Footer Styling */
+.university-footer {
+    position: fixed; /* Keeps it at the top while scrolling */
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50px; /* Adjust thickness */
+    background-color: #2C3E50; /* Adjust color */
+    z-index: 9999; /* Ensures it is on top of all elements */
+  }
+  
+  
+  .footer-content {
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    flex-wrap: wrap;
+  }
+  
+  /* Right Section - Social Media Icons */
+  .footer-right {
+    display: flex;
+    gap: 10px;
+   margin: 5px;
+  }
+  
+  .footer-item {
+    margin:2px;
+    align-items: center;
+ 
+  }
+  
+  .footer-item a {
+    color: white;
+    text-decoration: none;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+   
+  }
+  
+  .footer-item a:hover {
+    color: #1e90ff; /* Light blue on hover */
+  }
+  
+  .social-icon i {
+    font-size: 18px;
+    margin-right: 8px;
+  }
+  
+  /* Copyright Section */
+  .footer-copyright {
+    text-align: center;
+    font-size: 14px;
+    margin-top: 5px;
+    opacity: 0.4;
+    padding: 5;
+    color: #ffffff;
+
+  }
+
+
+  /* Responsive Design */
+  @media (max-width: 768px) {
+    .footer-content {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .footer-right {
+      justify-content: center;
+      align-items: center;
+      display: flex;
+    }
+  
+    .footer-item {
+      margin: 5px 0;
+    }
+  }
